# tenstorrent

./: .gitignore  LICENSE  Makefile  README.md  dummy_gen.py  example.py  pyproject.toml  requirements.txt
backend/: print_metal.py
examples/add_two_ints_in_compute/: compute.py  host.py  reader.py  writer.py
examples/add_two_ints_in_riscv/: host_and_kernel.py
examples/hello_world_compute/: compute.py  host.py
examples/hello_world_dm_core/: dm.py  host.py
examples/sharding/: reader.py
frontend/: decorators.py  memref_context.py  python_to_mlir.py  type_checker.py  util.py
tenstorrent/: __init__.py  tt_opt_main.py
tenstorrent/backend/: __init__.py  print_metal.py  print_metalium.py
tenstorrent/dialects/: __init__.py  circular_buffer.py  compute.py  data_movement.py  host.py  kernel_args.py  ttkernel.py  ttshared.py
tenstorrent/frontend/: __init__.py  decorators.py  dummy.py  memref_context.py  python_to_mlir.py  tt.py  type_casting.py  type_checker.py
tenstorrent/templates/: __init__.py  mlir_to_metalium.py
tenstorrent/tools/: tt-driver.sh  tt-opt  tt_opt.py
tenstorrent/transforms/: extract_driver.py  extract_tenstorrent.py  linalg_to_tt.py  ttxdsl_to_ttkernel.py
tenstorrent/utils/: __init__.py  lists.py
tests/: __init__.py  data_in.py
tests/examples/: add_2_integers_in_riscv.py
tests/filecheck/: __init__.py  example_loader.py  lit.cfg
tests/results/: adv_arg_eval.cpp  adv_arg_eval.mlir  bool_assign.cpp  bool_assign.mlir  bool_not.cpp  bool_not.mlir  boolean_operators.cpp  boolean_operators.mlir  call_compute_funcs.cpp  call_noc_funcs.cpp  (+56 more)
(+151 files in other folders)
